# OrcaSync

./: .flake8  .gitignore  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  CI_SETUP.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  PROFILES.md  README.md  ROADMAP.md  TROUBLESHOOTING.md  TUI_GUIDE.md  TUI_IMPLEMENTATION.md  codecov.yml  main.md  orcasync.spec  project_plan.md  pyproject.toml  requirements.txt  snapshot_report.html  test_tui.py  testing.ROADMAP.md
.github/: copilot-instructions.md
.github/instructions/: copilot-instructions-testing.md  testing.instructions.md
.github/workflows/: build.yml  test.yml
orcasync/: __init__.py  __main__.py  cli.py  config.py  git_ops.py  tui.py
profiles/user/default/filament/: 3DCanada PLA - Black ~ Matte.info  3DCanada PLA - Black ~ Matte.json  3DCanada PLA - Black.json  3DCanada PLA - Grey.json  3DCanada PLA+ - Aqua.json  3DCanada PLA+ - Fuchsia.json  Elegoo Matte PLA - Black.json  Elegoo Matte PLA - Ice Blue.json  Elegoo Matte PLA - Mint Green.json  Elegoo Matte PLA - Navy Blue.json  Elegoo Matte PLA - Purple.json  Elegoo Matte PLA - Ruby Red.json  Elegoo Matte PLA - Sakura Pink.json  Elegoo Matte PLA - Sunshine Yellow.info  Elegoo Matte PLA - Sunshine Yellow.json  Elegoo Matte PLA - White.json  Elegoo Matte PLA.info  Elegoo Matte PLA.json  Generic PLA - Fast.json  Generic PLA.json  Hello 3D PLA - Marble.json
profiles/user/default/machine/: Creality Ender-3 V2 0.4 nozzle - Copy.info  Creality Ender-3 V2 0.4 nozzle - Copy.json  Ender-3 V2 0.4 - Sprite Pro.json  Ender-3 V2 0.4.json  Ender-3 V2 0.5.info  Ender-3 V2 0.5.json  Ender-3 V2 0.6.json
profiles/user/default/process/: 0.08mm Hueforge.info  0.08mm Hueforge.json  0.15mm.info  0.15mm.json  0.20mm Standard Custom.info  0.20mm Standard Custom.json  0.20mm.json  0.24mm - Fast.json  0.24mm Vase Mode.json  0.24mm.json  0.25mm - 0.6mm.info  0.25mm - 0.6mm.json  0.45mm - 0.6mm.info  0.45mm - 0.6mm.json  0.45mm Vase Mode - 0.6mm.json
tests/: conftest.py  test_cli.py  test_config.py  test_git_ops.py  test_integration.py  test_tui_snapshots.py
tests/__snapshots__/test_tui_snapshots/: TestAppEdgeCases.test_app_long_repo_url.raw  TestAppEdgeCases.test_app_many_paths.raw  TestAppEdgeCases.test_app_unicode_in_paths.raw  TestCompactLogViewSnapshots.test_log_view_100_plus_messages.raw  TestCompactLogViewSnapshots.test_log_view_after_clear.raw  TestCompactLogViewSnapshots.test_log_view_multiple_messages.raw  TestCompactLogViewSnapshots.test_log_view_rich_formatting.raw  TestCompactLogViewSnapshots.test_log_view_single_message.raw  TestInitDialogSnapshots.test_init_dialog_auto_detected_paths.raw  TestInitDialogSnapshots.test_init_dialog_manual_path_entry.raw  TestOrcaSyncAppSnapshots.test_app_clear_logs_action.raw  TestOrcaSyncAppSnapshots.test_app_init_dialog_shown.raw  TestOrcaSyncAppSnapshots.test_app_initial_state.raw  TestOrcaSyncAppSnapshots.test_app_navigation.raw  TestOrcaSyncAppSnapshots.test_app_refresh_action.raw  TestOrcaSyncAppSnapshots.test_app_with_configured_repo.raw  TestOrcaSyncAppSnapshots.test_app_with_logs.raw  TestResponsiveLayout.test_large_terminal.raw  TestResponsiveLayout.test_medium_terminal.raw  TestResponsiveLayout.test_small_terminal.raw  TestResponsiveLayout.test_wide_terminal.raw
tests/benchmarks/: __init__.py  test_path_discovery.py  test_sync_performance.py
