[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orcasync"
version = "0.1.0"
description = "Sync OrcaSlicer profiles between multiple machines using Git"
readme = "README.md"
requires-python = ">=3.8.1"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["orcaslicer", "sync", "3d-printing", "profiles"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "gitpython>=3.1.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
orcasync = "orcasync.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["orcasync"]

[project.urls]
Homepage = "https://github.com/yourusername/orcasync"
"Bug Tracker" = "https://github.com/yourusername/orcasync/issues"
