[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orcasync"
version = "0.2.1"
description = "Sync OrcaSlicer profiles between multiple machines using Git"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["orcaslicer", "sync", "3d-printing", "profiles"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "gitpython>=3.1.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "textual>=7.3.0",
]

[project.scripts]
orcasync = "orcasync.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["orcasync"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-textual-snapshot>=1.0.0",
    "textual-dev>=1.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
    "pre-commit>=3.0.0",
    "pyinstaller>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/orcasync"
"Bug Tracker" = "https://github.com/yourusername/orcasync/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=orcasync",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as benchmark tests",
]
# Coverage thresholds
[tool.coverage.run]
source = ["orcasync"]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# pytest-benchmark settings
[tool.pytest.ini_options.benchmark]
max_time = "0.5"
min_rounds = 5
calibration_precision = 10
warmup = true
disable_gc = true

# Black formatter configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

# Flake8 configuration (via setup.cfg or .flake8 file)
# Note: flake8 doesn't read pyproject.toml natively

# Mypy type checker configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_optional = false
files = ["orcasync"]
exclude = [
    "tests/",
    "build/",
    "dist/",
]
